# Embedded.Advanced.C.Part2

./: .gitignore  CMakeLists.txt  README.md
hw1/: 1.c  2.c  3.c  4.c  5.c  6.c
hw1_optional/: 12.c
hw2/: 1.c  2.c
hw2_optional/: 3.c
hw3_optional/: 1.c  2.c
hw3_optional/35/: Makefile  lib.c  lib.h  main.c
hw3_optional/3_1/: Makefile  lib.c  lib.h
hw3_optional/3_2/: Makefile  main.c
hw3_optional/snake/: snake.c
hw5/: 1.c  2.c  3.c  4.c
hw6/calculations/: CMakeLists.txt
hw6/calculations/include/: calculations.h
hw6/calculations/src/: calculations.c  main.c
hw6/calculations/tests/: CMakeLists.txt  calculations_test.cpp
hw7/calculations/: CMakeLists.txt
hw7/calculations/include/: area.h  calculations.h
hw7/calculations/resources/: test.db
hw7/calculations/src/: area.c  calculations.c  main.c
hw7/calculations/tests/: CMakeLists.txt  area_test.cpp  calculations_test.cpp
hw8/calculations/: CMakeLists.txt
hw8/calculations/include/: area.h  math.h  test_area.h  test_math.h
hw8/calculations/src/: CMakeLists.txt  area.c  main.c  math.c
hw8/calculations/tests/: CMakeLists.txt  main_test.c  test_area.c  test_math.c
